--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-    background: rgb(125, 198, 205);
+    background: rgb(225, 227, 252);
     color: rgb(45, 45, 45);
     padding: 10px;
-    font-family: arial;
+    font-family: "Courier New", monospace;
 }
 #all-contents{
     max-width: 800px;
@@ -11,7 +11,7 @@ body{
 
 
 nav{
-    background: rgb(239, 80, 41);
+    background: rgb(151, 200, 255);
     margin: 0 auto;
     display: flex;
     padding: 10px;
@@ -31,14 +31,14 @@ h1{
     padding: 0 10px;
 }
 .sidebar-img {
-    width: 200px;
+    width: 100px;
 }
 .content {
     flex: 1;
     padding: 15px;
 }
 
-#intrests {
+#interests {
     border: 4px silver ridge;
     padding: 8px;
 }
