--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 nav{
     background: rgb(151, 200, 255);
     margin: 0 auto;
+    margin-bottom: 20px;
     display: flex;
     padding: 10px;
 }
@@ -30,12 +31,23 @@ h1{
     display: inline-block;
     padding: 0 10px;
 }
+main {
+    background: rgb(243, 192, 235);
+    display: flex;
+}
+.sidebar{
+    margin-right: 20px;
+    margin-top: 40px;
+    margin-left: 15px;
+    padding: 10px;
+}
+
 .sidebar-img {
-    width: 100px;
+    width: 250px;
 }
 .content {
     flex: 1;
-    padding: 15px;
+    padding: 50px;
 }
 
 #interests {
